zipkin-service/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-service
  labels:
    app: zipkin-service
spec:
  ports:
    -
      name: zipkin-service
      port: 80
      targetPort: 8000
  selector:
    app: zipkin-service
