zipkin-service/Route.yml
apiVersion: v1
kind: Route
metadata:
  name: zipkin-service
  labels:
    app: zipkin-service
spec:
  to:
    kind: Service
    name: zipkin-service
    weight: 100
  port:
    targetPort: zipkin-service
